added a discussion wrapping the two AI examples

--- a/map.tex
+++ b/map.tex
@@ -967,6 +967,10 @@ Please refer to the live roadmap planning document linked $\href{https://docs.go
 
 \section{$\mathsf{MeTTaIL}$ and AI}
 
+The aim of this section is to suggest that $\mathsf{MeTTaIL}$ is not
+merely for describing computational models, but is quite suited both
+to symbolic and neuromorphic AI.
+
 \subsection{Evolutionary programming: Mating Theories in Practice}
 
 We describe an approach to evolutionary programming for GSLTs.  We
@@ -1143,6 +1147,10 @@ anything like as efficient as what's achieved by transformer based
 networks. However, we also have an algorithm for compiling GSLTs to
 hypervectors. This may yield a more efficient execution path for these
 kinds of compositional connection-based learning algorithms.
+
+Again, the main point of these examples is that $\mathsf{MeTTaIL}$
+provides a natural setting for writing AI applications that run in a
+decentralized setting.
 
 \section{A few use cases}
 
